repos/emily-python/contents/test/parser/fail/setCount.em
# Set not enough things

# Arg: --ast2
# Expect failure

= 3